# BTRCP

./: .gitignore  LICENSE  README.md  btrcp.py  btrcp.sh  pyproject.toml  runcmdutils.py
.github/workflows/: test_btrcp.yml
src/: backup-lxc-container.py  btrcp.py  prelude.py  runcmdutils.py
tests/: combinator-tests.py  runtestutils.py  test_btrcp.py
