[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btrcp_mnemonic-bit"
version = "0.1.0"
authors = [
  { name="Marco Ruether" },
]
description = "A library and shell script which can be used to create backups."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "plumbum>=1.8",
]

[project.urls]
Homepage = "https://github.com/mnemonic-bit/btrcp"
Issues = "https://github.com/mnemonic-bit/btrcp/issues"
